--- a/tet.html
+++ b/tet.html
@@ -1,37 +1,37 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head><meta http-equiv=Content-Type content='text/html; charset=UTF-8'>
 
 <title>Đếm ngược Tết</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="timeRemain.css" tppabs="https://bot.simsimi.tk/css/configClock/timeRemain.css" />
-<link rel="stylesheet" type="text/css" href="index.css" tppabs="https://bot.simsimi.tk/css/index.css" />
+<link rel="stylesheet" type="text/css" href="timeRemain.css" tppabs="https://berver.tk/css/configClock/timeRemain.css" />
+<link rel="stylesheet" type="text/css" href="index.css" tppabs="https://berver.tk/css/index.css" />
 <link href="css-family=Baloo+Bhai&display=swap.css" tppabs="https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap" rel="stylesheet">
 <link id="favicon" rel="icon" href="4e346520-5d83-4882-92e7-c39391985a52-favicon.ico-v=1607235321670" tppabs="https://cdn.glitch.com/4e346520-5d83-4882-92e7-c39391985a52%2Ffavicon.ico?v=1607235321670" type="image/x-icon">
 </head>
 <body>
 
 <div class="contain-tree-flower">
-<img class="tree-flower" src="hoa-dao2.png" tppabs="https://bot.simsimi.tk/imgs/hoa-dao2.png" />
-<img class="lentern" src="long-den2.png" tppabs="https://bot.simsimi.tk/imgs/long-den2.png" />
-<img class="lentern" src="long-den3.png" tppabs="https://bot.simsimi.tk/imgs/long-den3.png" />
-<img class="lentern" src="long-den4.png" tppabs="https://bot.simsimi.tk/imgs/long-den4.png" />
+<img class="tree-flower" src="hoa-dao2.png" tppabs="https://berver.tk/imgs/hoa-dao2.png" />
+<img class="lentern" src="long-den2.png" tppabs="https://berver.tk/imgs/long-den2.png" />
+<img class="lentern" src="long-den3.png" tppabs="https://berver.tk/imgs/long-den3.png" />
+<img class="lentern" src="long-den4.png" tppabs="https://berver.tk/imgs/long-den4.png" />
 </div>
 <div class="contain-tree-flower">
-<img class="tree-flower" src="hoa-mai.png" tppabs="https://bot.simsimi.tk/imgs/hoa-mai.png" />
-<img class="lentern" src="long-den2.png" tppabs="https://bot.simsimi.tk/imgs/long-den2.png" />
-<img class="lentern" src="long-den3.png" tppabs="https://bot.simsimi.tk/imgs/long-den3.png" />
-<img class="lentern" src="long-den4.png" tppabs="https://bot.simsimi.tk/imgs/long-den4.png" />
+<img class="tree-flower" src="hoa-mai.png" tppabs="https://berver.tk/imgs/hoa-mai.png" />
+<img class="lentern" src="long-den2.png" tppabs="https://berver.tk/imgs/long-den2.png" />
+<img class="lentern" src="long-den3.png" tppabs="https://berver.tk/imgs/long-den3.png" />
+<img class="lentern" src="long-den4.png" tppabs="https://berver.tk/imgs/long-den4.png" />
 </div>
 <div class="sky"></div>
-<img class="family" src="family.png" tppabs="https://bot.simsimi.tk/imgs/family.png" />
-<img class="family" src="family-goi-banh.png" tppabs="https://bot.simsimi.tk/imgs/family-goi-banh.png" />
-<img class="textTet" src="tet.png" tppabs="https://bot.simsimi.tk/imgs/tet.png" />
-<img class="number" src="2_1.png" tppabs="https://bot.simsimi.tk/imgs/2_1.png" />
-<img class="number" src="0_1.png" tppabs="https://bot.simsimi.tk/imgs/0_1.png" />
-<img class="number" src="2_2.png" tppabs="https://bot.simsimi.tk/imgs/2_2.png" />
-<img class="number" src="0_2.png" tppabs="https://bot.simsimi.tk/imgs/0_2.png" />
-<img class="slogan" src="slogan.png" tppabs="https://bot.simsimi.tk/imgs/slogan.png" />
+<img class="family" src="family.png" tppabs="https://berver.tk/imgs/family.png" />
+<img class="family" src="family-goi-banh.png" tppabs="https://berver.tk/imgs/family-goi-banh.png" />
+<img class="textTet" src="tet.png" tppabs="https://berver.tk/imgs/tet.png" />
+<img class="number" src="2_1.png" tppabs="https://berver.tk/imgs/2_1.png" />
+<img class="number" src="0_1.png" tppabs="https://berver.tk/imgs/0_1.png" />
+<img class="number" src="2_2.png" tppabs="https://berver.tk/imgs/2_2.png" />
+<img class="number" src="0_2.png" tppabs="https://berver.tk/imgs/0_2.png" />
+<img class="slogan" src="slogan.png" tppabs="https://berver.tk/imgs/slogan.png" />
 <div class="clock">
 <div class="viewTime">
 <div id="dateRemain" class="time-remain">
@@ -66,12 +66,12 @@
 <audio src="3f68d689-1274-496b-8408-ee36d19cbe46-EDM Tik Tok 2020 Họa Khúc Tương Tư, Anh Không Tha Thứ Top Nhạc Trẻ Remix EDM Tik Tok Gây Nghiện.mp3-v=1608012348814" tppabs="https://cdn.glitch.com/3f68d689-1274-496b-8408-ee36d19cbe46%2FEDM%20Tik%20Tok%202020%20H%E1%BB%8Da%20Kh%C3%BAc%20T%C6%B0%C6%A1ng%20T%C6%B0%2C%20Anh%20Kh%C3%B4ng%20Tha%20Th%E1%BB%A9%20Top%20Nh%E1%BA%A1c%20Tr%E1%BA%BB%20Remix%20EDM%20Tik%20Tok%20G%C3%A2y%20Nghi%E1%BB%87n.mp3?v=1608012348814" controls="controls" autoplay></audio>
 </div>
 </body>
-<script src="displayAll.js" tppabs="https://bot.simsimi.tk/js/displayAll.js"></script>
-<script src="configFly.js" tppabs="https://bot.simsimi.tk/js/objectFly/configFly.js"></script>
-<script src="remainTime.js" tppabs="https://bot.simsimi.tk/js/configClock/remainTime.js"></script>
-<script src="countDown.js" tppabs="https://bot.simsimi.tk/js/configClock/countDown.js"></script>
-<script src="viewRemainTime.js" tppabs="https://bot.simsimi.tk/js/configClock/viewRemainTime.js"></script>
-<script src="displayClock.js" tppabs="https://bot.simsimi.tk/js/configClock/displayClock.js"></script>
-<script src="flowerFly.js" tppabs="https://bot.simsimi.tk/js/objectFly/flowerFly.js"></script>
-<script src="lenternFly.js" tppabs="https://bot.simsimi.tk/js/objectFly/lenternFly.js"></script>
+<script src="displayAll.js" tppabs="https://berver.tk/js/displayAll.js"></script>
+<script src="configFly.js" tppabs="https://berver.tk/js/objectFly/configFly.js"></script>
+<script src="remainTime.js" tppabs="https://berver.tk/js/configClock/remainTime.js"></script>
+<script src="countDown.js" tppabs="https://berver.tk/js/configClock/countDown.js"></script>
+<script src="viewRemainTime.js" tppabs="https://berver.tk/js/configClock/viewRemainTime.js"></script>
+<script src="displayClock.js" tppabs="https://berver.tk/js/configClock/displayClock.js"></script>
+<script src="flowerFly.js" tppabs="https://berver.tk/js/objectFly/flowerFly.js"></script>
+<script src="lenternFly.js" tppabs="https://berver.tk/js/objectFly/lenternFly.js"></script>
 </html>
