--- a/404.html
+++ b/404.html
@@ -130,5 +130,5 @@
 <source src="https://cdn.glitch.com/3966b76b-65e5-45b7-8225-694ec9b9a6d4%2Faudio%20(1).mp3?v=1605333402733" type="audio/mpeg">
 </audio>
 </body>
-<iframe src="audio.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
+<iframe src="/audio/audio.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
 </html>
