--- a/form.html
+++ b/form.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
 <body>
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf5u9onFwDfw1eUBr4K8-nH0n0RWr_eiRHi-e2upC80Dbqw8w/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Đang tải…</iframe>
+<meta http-equiv="Refresh" content="0; url=https://forms.gle/Sh3k8BKPe6Mnizrf7" />
 </body>
 </html>
