--- a/about.html
+++ b/about.html
@@ -26,13 +26,11 @@
     <div id="container">
         <h1 id="heading-primary">Chess JS</h1>
 
-        <p>Chess JS is a chess engine written in JavaScript. It works on Min-Max Searching in a tree, Min-Max is a Good Old Fashion Artificial Intelligence (GOFAI) algorithm. The algorithm is a naïve algorithm and for its optimization Alpha-beta pruning
-            is incorporated.</p>
+        <p>Chess JS là một công cụ cờ vua được viết bằng JavaScript. Nó hoạt động trên Min-Max Searching in a tree, Min-Max là một thuật toán Good Old Fashion Artificial Intelligence (GOFAI). Thuật toán này là một thuật toán ngây thơ và để tối ưu hóa Alpha-Beta pruning được kết hợp.</p>
 
-        <p><span style="font-weight: 700;">Alpha-Beta pruning</span>: This algorithm focuses in reducing the nodes visited in the depth-first search implementation used in the Min-Max Algorithm. Thus, without travelling the entire tree we make basic mathematical
-            conclusions on the tree.</p>
+        <p><span style="font-weight: 700;">Alpha-Beta pruning</span>: Thuật toán này tập trung vào việc giảm các nút được truy cập trong việc triển khai tìm kiếm đầu tiên được sử dụng trong Thuật toán Min-Max.Do đó, không cần di chuyển toàn bộ cây, chúng ta đưa ra các kết luận toán học cơ bản</p>
 
-        <p><span style="font-weight: 700;">Rules of Chess</span>: The Engine follows all rules of Chess specified by FIDE ( Fédération Internationale des Echecs : International Chess Federation), rules can be referred <a target="blank" href="https://www.fide.com/FIDE/handbook/LawsOfChess.pdf">here</a>.</p>
+        <p><span style="font-weight: 700;">Rules of Chess</span>: The Engine tuân theo tất cả các quy tắc của Cờ vua được chỉ định bởi FIDE (Fédération Internationale des Echecs : Liên đoàn Cờ vua Quốc tế), các quy tắc có thể được giới thiệu <a target="blank" href="https://www.fide.com/FIDE/handbook/LawsOfChess.pdf">here</a>.</p>
 
         <!-- <p>
             <span style="font-weight: 700;" >Terms of Use</span>: <br><br>
