--- a/countdown.html
+++ b/countdown.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Countdown App - Death?</title>
+  <link rel="icon" href="imgs/icon.ico" type="imgs/icon.ico"/>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,400,700&amp;display=swap&amp;subset=latin-ext'><link rel="stylesheet" href="css/countdown.css">
 
 </head>
