--- a/index.html
+++ b/index.html
@@ -22,4 +22,4 @@
         attribution=setup_tool
         page_id="102036845134690"
   theme_color="#0A7CFF">
-      </div></body></html>
+      </div><meta name = 'dmca-site-verify' content = 'ZlJMWndPdDVFZVdQWDBTOExnaVZOQT090' /></body></html>
