--- a/index.html
+++ b/index.html
@@ -22,4 +22,8 @@
         attribution=setup_tool
         page_id="102036845134690"
   theme_color="#0A7CFF">
-      </div><meta name = 'dmca-site-verify' content = 'ZlJMWndPdDVFZVdQWDBTOExnaVZOQT090' /><a href="//www.dmca.com/Protection/Status.aspx?ID=e39c1cce-5647-4a77-ab80-5181e656916a" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca-badge-w100-5x1-09.png?ID=e39c1cce-5647-4a77-ab80-5181e656916a"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></body></html>
+      </div><meta name = 'dmca-site-verify' content = 'ZlJMWndPdDVFZVdQWDBTOExnaVZOQT090' />
+      <a href="//www.dmca.com/Protection/Status.aspx?ID=e39c1cce-5647-4a77-ab80-5181e656916a" title="DMCA.com Protection Status" class="dmca-badge">
+      	<img src ="https://images.dmca.com/Badges/dmca-badge-w100-5x1-09.png?ID=e39c1cce-5647-4a77-ab80-5181e656916a"  alt="DMCA.com Protection Status" /></a>
+      <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
+  </body></html>
