--- a/color.html
+++ b/color.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>My Color Game </title>
-    <link type = "text/css" rel = "stylesheet" href = "colorgam.css" >
+    <link type = "text/css" rel = "stylesheet" href = "css/colorgame.css" >
 </head>
 <body>
     <h1>
@@ -29,6 +29,6 @@
         <div class = "square"></div>
         <div class = "square"></div>
     </div>
-    <script type = "text/javascript" src ="colorgame.js"></script>
+    <script type = "text/javascript" src ="js/colorgame.js"></script>
 </body>
 </html>
