--- a/chess.html
+++ b/chess.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link href="css/chess.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="images/favicon.ico" type="image/ico" sizes="16x16">
     <!-- <link rel="stylesheet" media="(max-width:900px)" type="text/css" href="secondary.css"> -->
     <!-- <link rel="stylesheet" media="(max-width:680px)" type="text/css" href="tertiary.css"> -->
@@ -141,7 +141,7 @@
     <script src="js/perft.js" type="text/javascript"></script>
     <script src="js/gui.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
-    <script src="./js/modal.js"></script>
+    <script src="js/modal.js"></script>
 </body>
 
 </html>
