--- a/dino.html
+++ b/dino.html
@@ -40,5 +40,5 @@
     }
 };
 </script>
-    <a href="https://www.dmca.com/compliance/berver.tk" title="DMCA Compliance information for berver.tk"><img src="https://www.dmca.com/img/dmca-compliant-grayscale.png" /></a><a href="//www.dmca.com/Protection/Status.aspx?ID=e39c1cce-5647-4a77-ab80-5181e656916a" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca-badge-w200-5x1-07.png?ID=e39c1cce-5647-4a77-ab80-5181e656916a"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
+    <a href="https://www.dmca.com/compliance/berver.ml" title="DMCA Compliance information for berver.ml"><img src="https://www.dmca.com/img/dmca-compliant-grayscale.png" /></a><a href="//www.dmca.com/Protection/Status.aspx?ID=e39c1cce-5647-4a77-ab80-5181e656916a" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca-badge-w200-5x1-07.png?ID=e39c1cce-5647-4a77-ab80-5181e656916a"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
 </html>
